add tags and Projects

--- a/layouts/partials/overview.html
+++ b/layouts/partials/overview.html
@@ -17,6 +17,9 @@
             <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3" href="{{ absURL "projects/" }}">
                 Projects
             </a>
+            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3" href="{{ absURL "tags/" }}">
+                Tags
+            </a>
             <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="{{ absURL "about/" }}">
                 About
             </a>
