--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -17,7 +17,7 @@
                     {{ $section_count}}
                 </span>
             </a>
-            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 selected" href="{{ absURL "projects/" }}">
+            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3" href="{{ absURL "projects/" }}">
                 Projects
             </a>
             <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 selected" href="{{ absURL "about/" }}">
