--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -50,6 +50,9 @@
                             <article class="markdown-body entry-content p-3 p-md-6" itemprop="text">
                                 {{- .Content -}}
                             </article>
+                            <article class="markdown-body entry-content p-3 p-md-6" itemprop="text">
+                                {{ partial "tags.html" .}}
+                            </article>
                         </div>
                     </div>
                 </div>
