--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -2,6 +2,7 @@
 {{ $section := where .Site.RegularPages "Section" "in" $mainSections }}
 {{ $section_count := len $section }}
 {{ $n_posts := $.Param "recent_posts_number" | default 6 }}
+{{$isNotTags := true}}
 <div class="col-lg-9 col-md-8 col-12 float-md-left pl-md-2">
     <div class="UnderlineNav width-full user-profile-nav top-0 is-placeholder"
         style="visibility: hidden; display: none; height: 56px;"></div>
@@ -11,21 +12,46 @@
             <a aria-current="page" class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="{{ .Site.BaseURL }}">
                 Overview
             </a>
+            {{if eq .Title "Posts"}}
             <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 selected" href="{{ absURL "posts/" }}">
                 Posts
                 <span class="Counter hide-lg hide-md hide-sm">
                     {{ $section_count}}
                 </span>
             </a>
+            {{else}}
+            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="{{ absURL "posts/" }}">
+                Posts
+                <span class="Counter hide-lg hide-md hide-sm">
+                    {{ $section_count}}
+                </span>
+            </a>
+            {{end}}
+            {{if eq .Title "Projects"}}
+            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 selected" href="{{ absURL "projects/" }}">
+                Projects
+            </a>
+            {{else}}
             <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3" href="{{ absURL "projects/" }}">
                 Projects
             </a>
+            {{end}}
+            {{if eq .Title "Tags"}}
+            {{$isNotTags = false}}
+            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 selected" href="{{ absURL "tags/" }}">
+                Tags
+            </a>
+            {{else}}
+            <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3" href="{{ absURL "tags/" }}">
+                Tags
+            </a>
+            {{end}}
             <a class="UnderlineNav-item mr-0 mr-md-1 mr-lg-3 " href="{{ absURL "about/" }}">
                 About
             </a>
         </nav>
     </div>
-
+    {{if $isNotTags}}
     <div class="position-relative">
         <div id="user-repositories-list">
             <ul data-filterable-for="your-repos-filter" data-filterable-type="substring">
@@ -33,19 +59,60 @@
                 <li class="col-12 d-flex width-full py-4 border-bottom public fork">
                     <div class="col-12 col-lg-12 d-inline-block">
                         <div class="d-inline-block mb-1">
+                            {{if $isNotTags}}
                             <h3>
                                 <a href="{{ .Permalink }}">{{ .Title }}</a>
                             </h3>
+                            {{else}}
+                            <h3>
+                                <a href="{{ .Permalink }}">#{{ .Title }}</a>
+                            </h3>
+                            {{end}}
                         </div>
-
+                        {{if $isNotTags}}
                         <div name="posts-post" class="text-gray mb-2 pr-4">
                             {{ .Summary | safeHTML }}
                         </div>
-
                         <div class="f6 text-gray mt-2">
                             Updated <relative-time datetime="{{ .PublishDate.Format "2006-01-02" }}" class="no-wrap"
                                 title="Modifyd at {{ .Lastmod.Format "2006/01/02" }}">
                                 {{ .PublishDate.Format "January 2, 2006" }}</relative-time>
+                        </div>
+                        {{end}}
+                    </div>
+                </li>
+                {{ end }}
+            </ul>
+            {{ if gt .Paginator.TotalPages 1}}
+            <div class="paginate-container">
+                <div class="BtnGroup" data-test-selector="pagination">
+                    {{ if .Paginator.HasPrev }}
+                    <a rel="nofollow" class="btn btn-outline BtnGroup-item"
+                        href="{{ .Paginator.Prev.URL }}">Previous</a>
+                    {{ else }}
+                    <button class="btn btn-outline BtnGroup-item" disabled="disabled">Previous</button>
+                    {{ end }}
+                    {{ if .Paginator.HasNext }}
+                    <a rel="nofollow" class="btn btn-outline BtnGroup-item" href="{{ .Paginator.Next.URL }}">Next</a>
+                    {{ else }}
+                    <button class="btn btn-outline BtnGroup-item" disabled="disabled">Next</button>
+                    {{ end }}
+                </div>
+            </div>
+            {{ end }}
+        </div>
+    </div>
+    {{else}}
+    <div class="position-relative">
+        <div id="user-repositories-list">
+            <ul data-filterable-for="your-repos-filter" data-filterable-type="substring">
+                {{ range $.Site.Taxonomies.tags.ByCount }}
+                <li class="col-12 d-flex width-full py-4 border-bottom public fork">
+                    <div class="col-12 col-lg-12 d-inline-block">
+                        <div class="d-inline-block mb-1">
+                            <h3>
+                                <a href="/tags/{{ .Name }}">#{{ .Name }} <small>({{ .Count }})</small></a>
+                            </h3>
                         </div>
                     </div>
                 </li>
@@ -70,4 +137,5 @@
             {{ end }}
         </div>
     </div>
+    {{end}}
 </div>
